src/css/mobile.styl
@import "config"

.mobile-footer
	display none

.map-selection-close
	display none

.clickable-div
	cursor pointer

@media (max-width: 1050px)
	.report-button
		right 300px
		top 70px


@media (max-width: 768px)
	.mobile-footer
		display block
		bottom 0
		position absolute
		z-index 1000
		width 100%
		background white
		height 3.5em

	.map-selection-close
		display inline
		position absolute
		right 0

	.mobile-footer-container
		height 100%
		width 100%

	.mobile-footer-child
		height 100%
		width calc(25% - 2px)
		display inline-block
		text-align center
		border 1px solid white
		background #2fa3d9
		color white

	.footer-logo-container, .footer-button-text
		height 50%

	.footer-button-text
		font-size 0.5em
		line-height 3em

	.tree-logo-container
		background-image url('images/layers-icon.svg')

	.country-logo-container
		background-image url('images/globe.svg')

	.search-logo-container
		background-image url('images/search-ex.svg')

	.analysis-logo-container
		background-image url('images/line-chart.svg')

	.tree-logo-container, .country-logo-container, .search-logo-container, .analysis-logo-container
		border-top 5px solid #2fa3d9
		background-repeat no-repeat
		background-size contain
		background-position center


	.tree-widget-container
		height auto
		max-height 75%
		z-index 100
		left 5%
		width 90%
		top 4em
		overflow scroll

	.tree-container-toggle
		display none

	.layer-tab-container, .tree-width
		width 100%

	.arcgisSearch .searchGroup .searchInput
		width 150px !important

	.search-button, .report-button, .analysis-button
		right 70px
		z-index 100
		top 13em
		// bottom 15em

	.report-button, .search-button, .analysis-button
		left 40px
		right 0
		margin-left auto
		margin-right auto
		width 200px

	.search-button
		left 0
		width calc(50% + 25px)

	.disclaimer
		margin-top auto

	.national-level-layer-lists
		margin-top 30px

	.print-button
		display none

	#draw-shape-icon
		margin-left -15px

	#upload-shapefile
		display none

